<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuAdd"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="Add"
        app:showAsAction="ifRoom" />
</menu>